# public-apis-mcp-server

./: README.md  pyproject.toml
src/public_apis_mcp_server/: __init__.py  __main__.py  server.py
