[project]
name = "public-apis-mcp-server"
version = "1.1.0"
description = "MCP server wrapping 10+ free public APIs (weather, countries, NASA, IP geo, dictionary, arXiv, books, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
public-apis-mcp-server = "public_apis_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/public_apis_mcp_server"]
